2000-11-14  Yann Muller  <ymuller@3glab.com>

	* gw/smsc_at.c: phone numbers starting with '+' or '00' are
	coded as international numbers, others are left with the 
	default (Unknown).	
	
2000-11-13  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c, gw/wapbox.c, gwlib/http.[ch], test/test_http.c:
	Changed the HTTP proxy configuration interface so that the access
	to the proxy can be authenticated. The actual implementation
	is still lacking, but the interface changed to http_use_proxy()
	is done.

2000-11-13  Lars Wirzenius  <liw@iki.fi>

	* Makefile.in: Use $(DESTDIR) in the install targets.

2000-11-13  Richard Braakman  <dark@wapi.com>

	* configure.in, config.h, gwlib/gwassert.h: Use NO_GWASSERT
	instead of NDEBUG.  Have gwassert.h define NO_GWASSERT if
	NDEBUG is defined.

	* gw/smsc_cimd2.c, gwlib/conn.c, gwlib/gwlib.h, gwlib/octstr.c:
	Use NO_GWASSERT instead of NDEBUG.

2000-11-10  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.c: Implemented persistent connections on the
	client end.

2000-11-10  Richard Braakman  <dark@wapi.com>

	* gwlib/gwlib.c: Call gwlib_protected_shutdown() last, because
	the protected functions are used by other shutdown functions.
	Thanks to Paul Keogh for pointing this out.

	* gwlib/gwmem.h, gwlib/gwmem-check.c, gwlib/gwlib.c:
	Added gwmem_shutdown() function, to be called after
	gw_check_leaks().  This makes it possible to check for
	leaks without shutting down.

	* doc/userguide/userguide.xml: Document the configure options
	added below.

2000-11-10  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.c: Implemented persistent connections on the
	server end.

2000-11-10  Richard Braakman  <dark@wapi.com>

	* configure.in: Added --with-defaults to make it possible to
	configure for speed or for debugging, with one option.
	Added --disable-assertions to set NDEBUG.  Made --with-malloc
	and --disable-assertions use the default set by --with-defaults. 
	Changed some whitespace to make ./configure --help align nicely.
